kubernetes/ha-k3s-kube-vip/manifests/demo-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 3
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: monachus/rancher-demo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
      app: demo
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: demo

spec:
  rules:
    - host: test.192.168.10.100.sslip.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: demo
              port:
                number: 8080
